# ai-project

./: .env.example  .gitignore  AgentOps_Hub_System_Design.docx  Dockerfile  QUICKSTART.md  Readme.md  SETUP.md  docker-compose.yml  implementation_plan.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
agents/: __init__.py  coder.py  graph.py  retriever.py  state.py  supervisor.py  web_search.py  writer.py
api/: main.py
config/: logger.py  prometheus.yml  settings.py
eval/: __init__.py
guardrails/: __init__.py  faithfulness_detector.py  injection_detector.py  middleware.py  pii_detector.py  toxicity_detector.py
observability/: __init__.py
rag/: __init__.py  qdrant_manager.py
src/core/: orchestrator.py
tests/: conftest.py  test_foundation.py
ui/: __init__.py  app.py  config.py  styles.py
ui/components/: __init__.py  chat_panel.py  eval_panel.py  ingest_panel.py  sidebar.py
ui/utils/: api_client.py
