[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-hub"
version = "1.0.0"
description = "Multi-agent AI system for document analysis and complex reasoning"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
